--- a/app/views/admin/add_account.scala.html
+++ b/app/views/admin/add_account.scala.html
@@ -12,6 +12,7 @@
                             <li class="uk-active"><a href="@controllers.admin.routes.Account.addAccount()">Add</a></li>
                             <li><a href="@controllers.admin.routes.Account.deleteAccount()">Delete</a></li>
                             <li><a href="@controllers.admin.routes.Account.listAccount()">List</a></li>
+                            <li><a href="@controllers.admin.routes.Account.edit()">Edit</a></li>
                         </ul>
                     </fieldset>
 
