--- a/app/views/admin/menu.scala.html
+++ b/app/views/admin/menu.scala.html
@@ -12,6 +12,7 @@
             <li><a href="@admin.routes.TimeOut.set()">Time Out</a></li>
             <li><a href="@admin.routes.Setting.setting()">On/Off Feature</a></li>
             <li><a onclick="setupFeatures()">Setup Features And Reset</a></li>
+            <li><a href="@admin.routes.Account.logout()">Logout</a></li>
         </ul>
     </div>
 </div>
