--- a/app/views/user/rating.scala.html
+++ b/app/views/user/rating.scala.html
@@ -137,8 +137,8 @@
 
                                         </div>
                                         <div class="form-action">
-                                            <input id="noVote@criteria.Id" class="btn-reset" type="reset" value="No Rate" onclick="colorOn(@criteria.Id);reset1(@criteria.Id)" />
-                                            @if(score.size < criteria.Id+1){
+                                            <input id="noVote@criteria.Id" class="btn-reset" type="reset" value="No Rating" onclick="colorOn(@criteria.Id);reset1(@criteria.Id)" />
+                                            @if(score.size < criteria.Id+1 || score.get(Integer.parseInt(criteria.Id+"")).equals(0)){
                                                 <script>
                                                    colorOn(@criteria.Id);
                                                 </script>
