--- a/app/views/user/team.scala.html
+++ b/app/views/user/team.scala.html
@@ -16,10 +16,10 @@
     <div class="uk-grid uk-grid-small" data-uk-grid-margin>
         <div class="uk-width-9-10 uk-container-center">
             <div class="panel panel-default border-zero-width">
-                <div class="panel-heading border-zero-width" style="background-color:#66CC99">
+                <div class="panel-heading border-zero-width" style="background-color:#16A085">
                     <h3 class="panel-title ui-text-white"><b>Description</b></h3>
                 </div>
-                <div class="panel-body border-zero-width ui-text-white" style="background-color:#16A085">
+                <div class="panel-body border-zero-width ui-text-white" style="background-color:#66CC99">
                 @group.description
                 </div>
             </div>
@@ -29,10 +29,10 @@
     <div class="uk-grid uk-grid-small" data-uk-grid-margin>
         <div class="uk-width-9-10 uk-container-center">
             <div class="panel panel-default border-zero-width" >
-                <div class="panel-heading border-zero-width"  style="background-color:#89C4F4">
+                <div class="panel-heading border-zero-width"  style="background-color:#4B77BE">
                     <h3 class="panel-title ui-text-white"><b>Member</b></h3>
                 </div>
-                <div class="panel-body border-zero-width"  style="background-color:#4B77BE">
+                <div class="panel-body border-zero-width"  style="background-color:#89C4F4">
                     <ul class="ui-text-white">
                     @members.map { member =>
                         <li>@member.name @member.lastname</li>
