--- a/app/views/admin/edit_user_type.scala.html
+++ b/app/views/admin/edit_user_type.scala.html
@@ -6,6 +6,9 @@
     <div class="uk-width-9-10 uk-container-center">
       <div class="uk-panel uk-panel-box uk-panel-box-secondary">
         <div class="uk-form">
+            <div class="uk-panel" style="display: block; text-align: right;">
+                <a href="@controllers.admin.routes.Menu.menu()" class="uk-button ui-text-white ui-button ui-redpink" style=" border-width : 0; ">Back</a>
+            </div>
           <fieldset data-uk-margin>
             <legend class="uk-margin-bottom-remove">User Type</legend>
             <ul class="uk-tab">
