modify rate UI function

--- a/app/views/user/main_menu.scala.html
+++ b/app/views/user/main_menu.scala.html
@@ -22,9 +22,11 @@
 
     <div class="uk-text-center">
         <div class="uk-grid uk-margin-top">
-            <a id='link_team_list' href="@controllers.user.routes.Team.teamList" class="uk-button uk-width-1-1 uk-icon-group uk-margin-small-bottom ui-text-white ui-button ui-darkorange" style="font-size: 500%; padding: 20px;">
+            <div class="uk-panel uk-width-1-1">
+                <a id='link_team_list' href="@controllers.user.routes.Team.teamList" class="uk-button uk-width-1-1 uk-icon-group uk-margin-small-bottom ui-text-white ui-button ui-darkorange" style="font-size: 500%; padding: 20px;">
                 <div id='text_team_list' class="uk-text-bottom" style="color: #ffffff; font-size: 30%; font-family: 'Signika', sans-serif;">Select Team</div>
-            </a>
+                </a>
+            </div>
         </div>
     </div>
 
