--- a/app/views/user/rating.scala.html
+++ b/app/views/user/rating.scala.html
@@ -80,7 +80,7 @@
                                             }else{
                                                 <input id="@Criteria.toStringId(criteria.Id, 5)" name="rating" type="radio" value="5"  onclick="colorOff(@criteria.Id)" />
                                             }
-                                            <label for="@Criteria.toStringId(criteria.Id , 5 )" data-value="5">
+                                            <label for="@Criteria.toStringId(criteria.Id , 5 )" data-value="5" style="  padding-left: 15%;">
                                                 <span class="rating-star">
                                                     <i class="fa fa-star-o"></i>
                                                     <i class="fa fa-star"></i>
@@ -92,7 +92,7 @@
                                             }else{
                                                 <input id="@Criteria.toStringId(criteria.Id, 4)" name="rating" type="radio" value="4"  onclick="colorOff(@criteria.Id)" />
                                             }
-                                            <label for="@Criteria.toStringId(criteria.Id , 4 )" data-value="4">
+                                            <label for="@Criteria.toStringId(criteria.Id , 4 )" data-value="4" style="  padding-left: 15%;">
                                                 <span class="rating-star">
                                                     <i class="fa fa-star-o"></i>
                                                     <i class="fa fa-star"></i>
@@ -104,7 +104,7 @@
                                             }else{
                                                 <input id="@Criteria.toStringId(criteria.Id, 3)" name="rating" type="radio" value="3"  onclick="colorOff(@criteria.Id)" />
                                             }
-                                            <label for="@Criteria.toStringId(criteria.Id , 3 )" data-value="3">
+                                            <label for="@Criteria.toStringId(criteria.Id , 3 )" data-value="3" style="  padding-left: 15%;">
                                                 <span class="rating-star">
                                                     <i class="fa fa-star-o"></i>
                                                     <i class="fa fa-star"></i>
@@ -116,7 +116,7 @@
                                             }else{
                                                 <input id="@Criteria.toStringId(criteria.Id, 2)" name="rating" type="radio" value="2"  onclick="colorOff(@criteria.Id)" />
                                             }
-                                            <label for="@Criteria.toStringId(criteria.Id , 2 )" data-value="2">
+                                            <label for="@Criteria.toStringId(criteria.Id , 2 )" data-value="2" style="  padding-left: 15%;">
                                                 <span class="rating-star">
                                                     <i class="fa fa-star-o"></i>
                                                     <i class="fa fa-star"></i>
