--- a/public/stylesheets/rate.css
+++ b/public/stylesheets/rate.css
@@ -29,7 +29,7 @@
 *******************************************/
 
 html {
-    font-size: 62.5%;
+   /*font-size: 62.5%;*/
 }
 
 body {
@@ -71,10 +71,6 @@ body {
 /* RATING - Form - Legend */
 .rating-form .form-legend {
     display: none;
-    margin: 0;
-    padding: 0;
-    font-size: 0%; font-size: 0rem;
-    /*background: green;*/
 }
 
 /* RATING - Form - Item */
@@ -84,7 +80,6 @@ body {
     width: 100%;
     text-align: center;
     direction: rtl;
-    /*background: green;*/
 }
 
 .rating-form .form-legend + .form-item {
@@ -93,7 +88,6 @@ body {
 
 .rating-form input[type='radio'] {
     position: absolute;
-    left: -9999px;
 }
 
 /* RATING - Form - Label */
@@ -110,8 +104,6 @@ body {
 .rating-form input[type='radio'] + label:before {
     content: attr(data-value);
     position: absolute;
-    right: 30px; top: 83px;
-    font-size: 30px; font-size: 0rem;
     opacity: 0;
     direction: ltr;
 .transition();
@@ -137,14 +129,11 @@ body {
 
 .rating-form label .fa {
     display: block;
-    font-size: 60px; font-size: 6rem;
-    line-height: 60px;
 .transition();
 }
 
 .rating-form label .fa-star-o {
-
-    font-size: 500%;
+    font-size: 350%;
 }
 
 .rating-form label:hover .fa-star-o,
@@ -157,7 +146,7 @@ body {
 
 .rating-form label .fa-star {
     position: absolute;
-    font-size: 500%;
+    font-size: 350%;
     left: 0; top: 0;
     opacity: 0;
 }
@@ -183,7 +172,7 @@ body {
 .rating-form .form-action {
     /*opacity: 0;*/
     position: absolute;
-    left: 5px; bottom: 10px;
+    bottom: 15%;
 .transition();
 }
 
@@ -194,11 +183,11 @@ body {
 
 .rating-form .btn-reset {
     display: inline-block;
-    margin-bottom: 30%;
+    margin-bottom: 25%;
     margin-left: 10%;
-    padding: 10% 15%;
+    padding: 15%;
     border: 0;
-    font-size: 100%;
+    font-size: 50%;
     background: #d3d3d3;
     color: #000000;
     cursor: auto;
