--- a/public/stylesheets/rate.css
+++ b/public/stylesheets/rate.css
@@ -1,47 +1,3 @@
-/*******************************************
-  = LESS
-*******************************************/
-
-/* LESS - Mixins */
-/*.clearfix() {*/
-
-/*&:before,&:after {*/
-     /*content: "";*/
-     /*display:table;*/
- /*}*/
-
-/*&:after {*/
-     /*clear: both;*/
- /*}*/
-
-/*}*/
-
-/*.transition() {*/
-    /*-webkit-transition: all .2s ease-in-out;*/
-    /*-moz-transition: all .2s ease-in-out;*/
-    /*-o-transition: all .2s ease-in-out;*/
-    /*transition: all .2s ease-in-out;*/
-/*}*/
-
-
-/*******************************************
-  = TYPOGRAPHY
-*******************************************/
-
-html {
-    font-size: 62.5%;
-}
-
-body {
-    font: 12px 'Arial', 'Helvetica Neue', 'Helvetica', sans-serif; font-size: 1.2rem;
-    background: #333;
-    color: #fff;
-}
-
-
-/*******************************************
-  = LAYOUT
-*******************************************/
 
 * {
     -webit-box-sizing: border-box;
@@ -144,7 +100,7 @@ body {
 
 .rating-form label .fa-star-o {
 
-    font-size: 500%;
+    font-size: 350%;
 }
 
 .rating-form label:hover .fa-star-o,
@@ -157,7 +113,7 @@ body {
 
 .rating-form label .fa-star {
     position: absolute;
-    font-size: 500%;
+    font-size: 350%;
     left: 0; top: 0;
     opacity: 0;
 }
@@ -240,12 +196,15 @@ body {
 
 @media screen and (min-width: 767px) {
     .form-item{
-        width: 295px;
+        width: 75%;
     }
     .form-action{
         width: 100px;
     }
     .btn-reset {
         width: 100px;
+    }
+    .rating-form label  {
+       left: 55px;
     }
 }
