--- a/app/views/admin/list_account.scala.html
+++ b/app/views/admin/list_account.scala.html
@@ -27,6 +27,10 @@
                     </div>
                     </div>
                     <table class="uk-table uk-table-striped uk-table-hover">
+                        <col width="50px">
+                        <col>
+                        <col>
+                        <col>
                         <thead>
                             <tr>
                                 <th>No.</th>
