--- a/app/views/admin/search_edit_account.scala.html
+++ b/app/views/admin/search_edit_account.scala.html
@@ -28,9 +28,9 @@
             <div id="lastname_@list.id">@list.lastname</div>
         </td>
         <td style="text-align: right">
-            <a id="edit_@list.id" class = "uk-button ui-eucalyptus ui-text-white" onclick="edit(@list.id)">Edit</a>
-            <a id="save_@list.id" class = "uk-button ui-eucalyptus ui-text-white" onclick="save(@list.id)" style="display: none">Save</a>
-            <a id="cancel_@list.id" class = "uk-button ui-darkorange ui-text-white" onclick="cancel(@list.id)" style="display: none">Cancel</a>
+            <a id="edit_@list.id" class = "uk-width-4-10 uk-button uk-button ui-eucalyptus ui-text-white" onclick="edit(@list.id)">Edit</a>
+            <a id="save_@list.id" class = "uk-width-4-10 uk-button uk-button ui-eucalyptus ui-text-white" onclick="save(@list.id)" style="display: none">Save</a>
+            <a id="cancel_@list.id" class = "uk-width-4-10 uk-button uk-button ui-darkorange ui-text-white" onclick="cancel(@list.id)" style="display: none">Cancel</a>
         </td>
     </tr>
 }
