--- a/app/views/admin/edit_criteria.scala.html
+++ b/app/views/admin/edit_criteria.scala.html
@@ -6,13 +6,16 @@
         <div class="uk-width-9-10 uk-container-center">
             <div class="uk-panel uk-panel-box uk-panel-box-secondary">
                 <div class="uk-form">
+                    <div class="uk-panel" style="display: block; text-align: right;">
+                        <a href="@controllers.admin.routes.Menu.menu()" class="uk-button ui-text-white ui-button ui-redpink" style=" border-width : 0; ">Back</a>
+                    </div>
                     <fieldset data-uk-margin>
                         <legend class="uk-margin-bottom-remove">Criteria</legend>
                         <ul class="uk-tab">
                             <li><a href="@controllers.admin.routes.Criteria.addCriteria()">Add</a></li>
-                            <li class="uk-active"><a href="@controllers.admin.routes.Criteria.edit()">Edit</a></li>
                             <li><a href="@controllers.admin.routes.Criteria.deleteCriteria()">Delete</a></li>
                             <li><a href="@controllers.admin.routes.Criteria.listCriteria()">List</a></li>
+                            <li class="uk-active"><a href="@controllers.admin.routes.Criteria.edit()">Edit</a></li>
                         </ul>
                     </fieldset>
                     <div class="uk-margin-top">
