--- a/app/views/user/team.scala.html
+++ b/app/views/user/team.scala.html
@@ -19,8 +19,8 @@
                 <div class="panel-heading border-zero-width" style="background-color:#16A085">
                     <h3 class="panel-title ui-text-white"><b>Description</b></h3>
                 </div>
-                <div class="panel-body border-zero-width ui-text-white" style="background-color:#66CC99">
-                @group.description
+                <div id="description" class="panel-body border-zero-width ui-text-white" style="background-color:#66CC99">
+                    @Html(group.description)
                 </div>
             </div>
         </div>
