--- a/app/views/user/main_menu.scala.html
+++ b/app/views/user/main_menu.scala.html
@@ -41,6 +41,15 @@
         </div>
     }
     <div class="uk-text-center">
+        <div class="uk-grid uk-margin-small-top">
+            <div class="uk-panel uk-width-1-1">
+                <a id='link_vote' href="@controllers.user.routes.Vote.vote()" class="uk-button uk-width-1-1 uk-icon-thumbs-o-up uk-margin-small-bottom ui-text-white ui-button ui-limegreen" style="font-size: 500%; padding: 20px;">
+                    <div id='text_vote' class="uk-text-bottom" style="color: #ffffff; font-size: 30%; font-family: 'Signika', sans-serif;">Vote</div>
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="uk-text-center">
         <div class="uk-grid uk-grid-small uk-margin-small-top">
             <div class="uk-panel uk-width-6-10">
                 <a id="link_rating_result" href="@controllers.user.routes.Rating.ratingResult()" class="uk-button uk-icon-trophy uk-margin-small-bottom ui-text-white ui-button ui-darkviolet" style="width : 100% ; font-size : 500% ; padding : 20px ;">
