--- a/app/views/user/main_menu.scala.html
+++ b/app/views/user/main_menu.scala.html
@@ -1,4 +1,4 @@
-@(message: String)(team: Team)(teamList: Boolean)(uploadLogo: Boolean)(ratingResult: Boolean)(dateTime: String)
+@(message: String)(team: Team)(teamList: Boolean)(uploadLogo: Boolean)(ratingResult: Boolean)(vote: Boolean)(voteResult: Boolean)(dateTime: String)
 
 @main("Main menu")(css) {
     <div class="uk-grid uk-grid-collapse">
@@ -40,15 +40,28 @@
             </div>
         </div>
     }
+    @if(vote){
     <div class="uk-text-center">
         <div class="uk-grid uk-margin-small-top">
             <div class="uk-panel uk-width-1-1">
-                <a id='link_vote' href="@controllers.user.routes.Vote.vote()" class="uk-button uk-width-1-1 uk-icon-thumbs-o-up uk-margin-small-bottom ui-text-white ui-button ui-limegreen" style="font-size: 500%; padding: 20px;">
+                <a id='link_vote' href="@controllers.user.routes.Vote.vote()" class="uk-button uk-width-1-1 uk-icon-thumbs-o-up uk-margin-small-bottom ui-text-white ui-button ui-dodgerblue" style="font-size: 500%; padding: 20px;">
                     <div id='text_vote' class="uk-text-bottom" style="color: #ffffff; font-size: 30%; font-family: 'Signika', sans-serif;">Vote</div>
                 </a>
             </div>
         </div>
     </div>
+    }
+    @if(voteResult){
+    <div class="uk-text-center">
+        <div class="uk-grid uk-margin-small-top">
+            <div class="uk-panel uk-width-1-1">
+                <a id='link_vote_result' href="@controllers.user.routes.Vote.result()" class="uk-button uk-width-1-1 uk-icon-thumbs-o-up uk-margin-small-bottom ui-text-white ui-button ui-limegreen" style="font-size : 500% ; padding : 20px ;">
+                    <div id='text_vote_result' class="uk-text-bottom" style="color : #ffffff ; font-size : 30% ; font-family : 'Signika', sans-serif ;">Vote Result</div>
+                </a>
+              </div>
+        </div>
+    </div>
+    }
     <div class="uk-text-center">
         <div class="uk-grid uk-grid-small uk-margin-small-top">
             <div class="uk-panel uk-width-6-10">
