Add vote in menu

--- a/app/views/user/upload_logo.scala.html
+++ b/app/views/user/upload_logo.scala.html
@@ -24,7 +24,7 @@
                 <div id="progressbar" class="uk-progress uk-hidden">
                     <div class="uk-progress-bar" style="width: 0%;">...</div>
                 </div>
-
+                    <br>* Maximum size 3MB/file.
             </div>
         </div>
 
