--- a/app/views/user/upload_screenshot.scala.html
+++ b/app/views/user/upload_screenshot.scala.html
@@ -30,7 +30,9 @@
                         </div>
 
                     </div>
+                    <br>* Maximum 4 files. Maximum size 3MB/file.
                 </div>
+
 
             </div>
         </div>
