--- a/app/views/admin/main.scala.html
+++ b/app/views/admin/main.scala.html
@@ -21,4 +21,9 @@
     <body>
         @content
     </body>
+    @*<footer class="footer">*@
+        @*<div class="container">*@
+            @*<p>Dev By TheFrank</p>*@
+        @*</div>*@
+    @*</footer>*@
 </html>
