--- a/app/views/user/vote.scala.html
+++ b/app/views/user/vote.scala.html
@@ -17,7 +17,7 @@
         <div class="uk-grid uk-grid-margin uk-grid-small">
 
             @catalogs.map { catalog=>
-            <div class="uk-panel uk-width-1-1 uk-margin">
+            <div class="uk-panel uk-width-1-1 uk-margin-small">
                 <div class="uk-grid uk-grid-small">
                     <div class="uk-width-9-10 uk-container-center">
                         <div class="uk-panel uk-panel-box ">
