--- a/app/views/user/main.scala.html
+++ b/app/views/user/main.scala.html
@@ -5,8 +5,7 @@
 <html>
     <head>
         <title>@title</title>
-        <meta name="viewport" content="width=device-width">
-
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/icon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.11.2.min.js")" type="text/javascript"></script>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("bootstrap-3.3.2/css/bootstrap.min.css")">
@@ -19,6 +18,12 @@
 
     </head>
     <body>
-        @content
+        @*<div id="wrapper">*@
+            @content
+        @*<div id="footer"> Dev </div>*@
+        @*</div>*@
+
+
     </body>
+
 </html>
