--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,6 +1,7 @@
 html, body{
     background: #2C3E50;
     font-family: 'Signika', sans-serif;
+    height:100%;
 }
 .ui-red{
     background: #c0392b;
@@ -68,4 +69,16 @@ a:hover{
     color: #FFFFFF;
     border-color: rgba(216, 80, 48, 0.3);
 }
-
+#wrapper {
+    min-height:100%;
+    position:relative;
+}
+#footer {
+    /*background:#ffab62;*/
+    /*top:100%;*/
+    width:100%;
+    height:20px;
+    position:absolute;
+    bottom:0;
+    left:0;
+}
