--- a/app/views/user/login.scala.html
+++ b/app/views/user/login.scala.html
@@ -17,8 +17,8 @@
                 <div class="uk-panel uk-panel-box">
 
                     <div class="form-group">
-                        Email
-                        <input class="form-control" type="email" name="email">
+                        Username
+                        <input class="form-control" type="text" name="email">
                     </div>
                     <div class="form-group">
                         Password
