modify main menu ui

--- a/app/views/user/main_menu.scala.html
+++ b/app/views/user/main_menu.scala.html
@@ -3,7 +3,7 @@
 @main("Main menu")(css) {
     <div class="uk-grid uk-grid-collapse">
         <div class="uk-width-1-1">
-            <div class="uk-panel uk-panel-box" style="border-color: inherit ;background: #000000; ;color: #ffffff">@message</div>
+            <div class="uk-panel uk-panel-box" style="border-color: inherit ;background: #000000; ;color: #ffffff">Username: @message</div>
         </div>
     </div>
     <div class="uk-grid uk-grid-collapse">
