Change result page into a table

--- a/app/views/user/login.scala.html
+++ b/app/views/user/login.scala.html
@@ -1,6 +1,6 @@
 @(form: Form[forms.Login])(createAccount: Boolean)(createTeam: Boolean)
 
-@main("Welcome to Exceed rating")(css) {
+@main("Welcome to Exceed Vote")(css) {
     <div class="uk-grid uk-margin-large-top" data-uk-grid-margin>
         <div class="uk-width-9-10 uk-container-center" style="text-align: center; color: #ffffff">
             <h1 class="uk-display-inline-block" style="color: #ffffff;margin-bottom: 30px;">Exceed Vote</h1>
