Change table header text to white

--- a/app/views/user/rating_result.scala.html
+++ b/app/views/user/rating_result.scala.html
@@ -28,7 +28,7 @@
                             <col>
                             <col>
                             <col>
-                            <thead style="background-color : #318aca">
+                            <thead style="color:#ffffff;background-color : #318aca">
                                 <tr>
                                     <th>No.</th>
                                     <th>Team</th>
@@ -72,7 +72,7 @@
                         <col>
                         <col>
                         <col>
-                        <thead style="background-color : #2dae5b">
+                        <thead style="color:#ffffff;background-color : #2dae5b">
                             <tr>
                                 <th>No.</th>
                                 <th>Team</th>
