--- a/app/views/user/vote_result.scala.html
+++ b/app/views/user/vote_result.scala.html
@@ -27,7 +27,7 @@
                                 <col>
                                 <col>
                                 <col>
-                                <thead style="background-color : #318aca">
+                                <thead style="color:#ffffff;background-color : #318aca">
                                     <tr>
                                         <th>No.</th>
                                         <th>Team</th>
