Add report menu for admin Change some models in account and rating

--- a/app/views/admin/menu.scala.html
+++ b/app/views/admin/menu.scala.html
@@ -10,6 +10,7 @@
             <li><a href="@admin.routes.UserType.edit()">User Type</a></li>
             <li><a href="@admin.routes.Team.listTeam()">Team</a></li>
             <li><a href="@admin.routes.TimeOut.set()">Time Out</a></li>
+            <li><a href="@admin.routes.Report.report()">Report</a></li>
             <li><a href="@admin.routes.Setting.setting()">On/Off Feature</a></li>
             <li><a onclick="setupFeatures()">Setup Features And Reset</a></li>
             <li><a href="@admin.routes.Account.logout()">Logout</a></li>
