--- a/app/views/user/vote_result.scala.html
+++ b/app/views/user/vote_result.scala.html
@@ -1,13 +1,13 @@
 @(list: List[Stuff[Catalog,Team,Integer]])
 
 @main("Group List")(css) {
-    <div class="uk-grid uk-text-center uk-grid-collapse">
+    <div class="uk-grid uk-grid-collapse uk-text-center" data-uk-grid-margin >
         <div class="uk-panel uk-width-1-6">
-            <a href="@controllers.user.routes.Team.teamList()" class="uk-button uk-icon-arrow-left uk-margin-small-bottom ui-text-white ui-button ui-redpink" style="width:100%; padding: 18px; border-width: 0; height: 100%"></a>
+            <a href="@controllers.user.routes.Menu.mainMenu()" class="uk-button uk-icon-arrow-left ui-text-white ui-button ui-redpink" style="width : 100% ; padding : 18px ; border-width : 0 ; height : 60px; font-size: large;"></a>
         </div>
         <div class="uk-width-5-6">
-            <div class="uk-panel uk-panel-box ui-yellow ui-text-white" style="border-width: 0;">
-                <b>Rating Result</b>
+            <div class="uk-panel uk-panel-box ui-yellow" style="color: #ffffff; border-width: 0; font-size: large;height : 60px;">
+                <b>Vote Result</b>
             </div>
         </div>
     </div>
