--- a/app/views/user/main_menu.scala.html
+++ b/app/views/user/main_menu.scala.html
@@ -1,4 +1,4 @@
-@(message: String)(team: Team)(teamList: Boolean)(uploadLogo: Boolean)(ratingResult: Boolean)(vote: Boolean)(voteResult: Boolean)(dateTime: String)
+@(message: String)(team: Team)(teamList: Boolean)(editDescription: Boolean)(ratingResult: Boolean)(vote: Boolean)(voteResult: Boolean)(dateTime: String)
 
 @main("Main menu")(css) {
     <div class="uk-grid uk-grid-collapse">
@@ -64,6 +64,17 @@
         </div>
     </div>
     }
+    @if(ratingResult){
+        <div class="uk-text-center">
+            <div class="uk-grid uk-grid-small uk-margin-small-top">
+                <div class="uk-panel uk-width-1-1">
+                    <a id="link_rating_result" href="@controllers.user.routes.Rating.ratingResult()" class="uk-button uk-icon-trophy uk-margin-small-bottom ui-text-white ui-button ui-darkviolet" style="width : 100% ; font-size : 500% ; padding : 20px ;">
+                        <div id="text_rating_result" class="uk-text-bottom" style="color : #ffffff ; font-size : 30% ; font-family : 'Signika', sans-serif ;">Rating Result</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    }
     <div class="uk-text-center uk-margin-large-bottom">
         <div class="uk-grid uk-grid-small uk-margin-small-top">
             <div class="uk-panel uk-width-1-1">
@@ -83,20 +94,12 @@
          $('#text_team_list').text("Team List (Disable)");
         }
 
-        if (!@uploadLogo){
+        if (!@editDescription){
          $('#link_edit_description').click(function(){
             return false;
          });
          $('#text_edit_description').text("Edit Team Description (Disable)");
         }
-
-        if (!@ratingResult){
-         $('#link_rating_result').click(function(){
-            return false;
-         });
-         $('#text_rating_result').text($('#text_rating_result').text()+" (Disable)");
-        }
-
 
     </script>
 }
