--- a/app/views/user/rating_result.scala.html
+++ b/app/views/user/rating_result.scala.html
@@ -12,7 +12,7 @@
             </div>
         </div>
     </div>
-
+    <div class="uk-margin uk-margin-large-bottom">
     @rankAll.map { stuff =>
 
         <div class="uk-grid uk-grid-small" data-uk-grid-margin>
@@ -100,6 +100,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
 }
 @css = {
