--- a/app/views/user/vote_result.scala.html
+++ b/app/views/user/vote_result.scala.html
@@ -11,7 +11,7 @@
             </div>
         </div>
     </div>
-
+    <div class="uk-margin uk-margin-large-bottom">
     @list.map { stuff =>
 
         <div class="uk-grid uk-grid-small" data-uk-grid-margin>
@@ -57,6 +57,7 @@
             </div>
         </div>
     }
+    </div>
 
 }
 @css = {
