--- a/app/views/admin/add_account.scala.html
+++ b/app/views/admin/add_account.scala.html
@@ -21,7 +21,7 @@
 
                     <form id="form" action="@controllers.admin.routes.Account.addAccount()" method="post" class="uk-form uk-margin-top">
                         <fieldset data-uk-margin>
-                            <input name="email" type="email" placeholder="email" class="uk-width-1-1" value="@form.data.get("email")">
+                            <input name="email" type="username" placeholder="username" class="uk-width-1-1" value="@form.data.get("email")">
 
 
                             <input name="password" type="password" placeholder="password" class="uk-width-1-1">
