fix bugs: too long text in team description and increase heap space of java

--- a/app/views/user/team.scala.html
+++ b/app/views/user/team.scala.html
@@ -80,6 +80,8 @@
         }
         $('#description').html(marked(temp));
         $('#description').children().css("color","white");
+        $('#description').children().css("overflow","hidden");
+        $('#description').children().css("text-overflow","ellipsis");
         $('#description table').css("color","black");
         $('#description table').css("background","white");
         $('#description table').addClass("uk-table uk-table-hover uk-table-striped");
